--- a/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
+++ b/CardioHealth/TabBarControllers/Dashboard/APHDashboard.storyboard
@@ -223,6 +223,99 @@
             </objects>
             <point key="canvasLocation" x="879" y="866"/>
         </scene>
+        <!--6-minute walk-->
+        <scene sceneID="XLe-8B-On4">
+            <objects>
+                <tableViewController storyboardIdentifier="APHWalkTestViewController" id="SGm-b9-S57" customClass="APHWalkTestViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="54" sectionHeaderHeight="40" sectionFooterHeight="22" id="evR-Do-etX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="separatorColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="APHWalkTestDetailsTableViewCell" rowHeight="54" id="rhl-sQ-dJA" customClass="APHWalkTestDetailsTableViewCell">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rhl-sQ-dJA" id="XRe-M3-MsA">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X8x-gz-X7Y">
+                                            <rect key="frame" x="0.0" y="0.0" width="4" height="54"/>
+                                            <color key="backgroundColor" red="0.93725490199999995" green="0.2666666667" blue="0.3803921569" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="4" id="Grr-O1-fqK"/>
+                                            </constraints>
+                                        </view>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Hel-l8-ajr">
+                                            <rect key="frame" x="14" y="12" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="UQj-tJ-V2W"/>
+                                                <constraint firstAttribute="height" constant="30" id="tXt-or-f4a"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRq-gi-cWb">
+                                            <rect key="frame" x="61" y="14" width="156" height="27"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="27" id="igx-7M-Ics"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9999 ft" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1A0-1W-4an">
+                                            <rect key="frame" x="225" y="13" width="81" height="28"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="28" id="XlX-BV-srq"/>
+                                                <constraint firstAttribute="width" constant="81" id="oNS-S0-3mi"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="shy-As-jfz">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
+                                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="hke-MX-9I3"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="centerY" secondItem="wRq-gi-cWb" secondAttribute="centerY" constant="-0.5" id="1Ug-lv-7M3"/>
+                                        <constraint firstItem="shy-As-jfz" firstAttribute="leading" secondItem="XRe-M3-MsA" secondAttribute="leading" id="4nH-dc-oPd"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="X8x-gz-X7Y" secondAttribute="bottom" constant="-9" id="5s7-FR-G2V"/>
+                                        <constraint firstAttribute="centerY" secondItem="1A0-1W-4an" secondAttribute="centerY" id="WM8-7g-Nx2"/>
+                                        <constraint firstItem="X8x-gz-X7Y" firstAttribute="top" secondItem="XRe-M3-MsA" secondAttribute="topMargin" constant="-8" id="aUM-Zb-9cS"/>
+                                        <constraint firstAttribute="trailing" secondItem="shy-As-jfz" secondAttribute="trailing" id="d8d-LQ-Df2"/>
+                                        <constraint firstItem="wRq-gi-cWb" firstAttribute="leading" secondItem="XRe-M3-MsA" secondAttribute="leadingMargin" constant="53" id="eFt-6o-ND5"/>
+                                        <constraint firstItem="Hel-l8-ajr" firstAttribute="leading" secondItem="XRe-M3-MsA" secondAttribute="leadingMargin" constant="6" id="lwl-Ua-NPx"/>
+                                        <constraint firstAttribute="centerY" secondItem="Hel-l8-ajr" secondAttribute="centerY" id="mJ7-rH-XS4"/>
+                                        <constraint firstItem="shy-As-jfz" firstAttribute="top" secondItem="XRe-M3-MsA" secondAttribute="topMargin" constant="-8" id="pCx-56-GLI"/>
+                                        <constraint firstItem="1A0-1W-4an" firstAttribute="leading" secondItem="wRq-gi-cWb" secondAttribute="trailing" constant="8" id="uyP-dJ-N1O"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1A0-1W-4an" secondAttribute="trailing" constant="6" id="w4g-wR-pf3"/>
+                                        <constraint firstItem="X8x-gz-X7Y" firstAttribute="leading" secondItem="XRe-M3-MsA" secondAttribute="leadingMargin" constant="-8" id="xcd-gX-C6A"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="detailTextLabel" destination="1A0-1W-4an" id="mUe-Dt-D1H"/>
+                                    <outlet property="imageView" destination="Hel-l8-ajr" id="ynQ-9D-RaN"/>
+                                    <outlet property="textLabel" destination="wRq-gi-cWb" id="bxQ-5K-vcA"/>
+                                    <outlet property="tintView" destination="X8x-gz-X7Y" id="Ljl-l1-YI3"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="SGm-b9-S57" id="zu7-pY-PlG"/>
+                            <outlet property="delegate" destination="SGm-b9-S57" id="SkL-Pf-7fW"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="6-minute walk" id="Qf1-MO-SBk"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L98-wc-1IA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1731" y="859"/>
+        </scene>
         <!--Dashboard-->
         <scene sceneID="m2z-G3-Mm6">
             <objects>
